Adding metaspace options for testing